<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/character_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/character_detail_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_detail_name" />

    <TextView
        android:id="@+id/character_detail_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/character_detail_image"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/character_detail_status_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/character_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/character_detail_status_text"
        app:layout_constraintTop_toTopOf="@id/character_detail_status_text"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/character_detail_species_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_detail_status_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/character_detail_species_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/character_detail_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/character_detail_species_text"
        app:layout_constraintTop_toBottomOf="@id/character_detail_status_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/character_detail_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_detail_species_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/character_detail_gender_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/character_detail_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/character_detail_gender_text"
        app:layout_constraintTop_toBottomOf="@id/character_detail_species_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/character_origin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_detail_gender_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/character_origin_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/character_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/character_origin_text"
        app:layout_constraintTop_toBottomOf="@id/character_detail_gender_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/character_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_origin_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/character_location_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/character_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/character_location_text"
        app:layout_constraintTop_toBottomOf="@id/character_origin_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/character_episodes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_location_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/character_episodes_text"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/characters_episodes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_episodes_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>