<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/episode_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/episode_detail_air_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_detail_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/episode_detail_air_date_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/episode_detail_air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/episode_detail_air_date_text"
        app:layout_constraintTop_toBottomOf="@id/episode_detail_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/episode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_detail_air_date_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/episode_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/episode_text"
        app:layout_constraintTop_toBottomOf="@id/episode_detail_air_date_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/episode_characters_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/episode_characters_text"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/location_characters_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_characters_text"
        app:spanCount="2" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>